--- a/views/board.hbs
+++ b/views/board.hbs
@@ -69,6 +69,7 @@
         <a href="/?page={{lastPage}}&search={{@root.search}}">&gt;&gt;</a>
       </div>
     </div>
+    <img src="https://corinybucket.s3.ap-northeast-2.amazonaws.com/image/1707910243628_1707909702975_free-icon-cat-5222191.png" alt="사진이였던것" width="100px" height="100px">
 
 <script>
   const postOption ={
